release/prd/eks.yaml
---
# Source: microservices-manifests-eks/templates/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: aws-observability
  labels:
    aws-observability: enabled
    env: prd
